<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">D&amp;D Companion</string>
    <string name="titulo_personaje">Tu personaje</string>
    <string name="titulo_misiones_activas">Misiones activas</string>
    <string name="titulo_misiones_disponibles">Misiones disponibles</string>
    <string name="titulo_hechizos">Hechizos conocidos</string>
    <string name="titulo_dados">Tirada de dados</string>
    <string name="btn_agregar">＋  Nueva misión</string>
</resources>